getting basic home screen done

--- a/goFish.html
+++ b/goFish.html
@@ -6,5 +6,10 @@
   <script src="goFish.js"></script>
 </head>
 <body>
+  <div id="top">Go Fish</div>
+  <div id="twoButtons">
+    <span id="play">Play</span>
+    <span id="instructions">Instructions</span>
+  </div>
 </body>
 </html>
