scores on board

--- a/goFish.html
+++ b/goFish.html
@@ -3,6 +3,7 @@
 <head>
   <title>Go Fish</title>
   <link rel="stylesheet" type="text/css" href="goFish.css"/>
+  <link rel="icon" href="../images/favicon.ico" type="image/ico" sizes="16x16"/>
   <script src="goFish.js"></script>
 </head>
 <body>
