--- a/goFish.html
+++ b/goFish.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Go Fish</title>
+  <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
   <link rel="stylesheet" type="text/css" href="goFish.css"/>
   <link rel="icon" href="../images/favicon.ico" type="image/ico" sizes="16x16"/>
   <script src="goFish.js"></script>
